--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Mohammed Rizwan</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="C:\Users\Admin\Desktop\Web Development\My Site\favicon.ico">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <div class="top-container">
