--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div class="top-container">
-      <img src="images/cloud.png" alt="Cloud Image">
+      <img src="cloud.png" alt="Cloud Image">
       <h1>Mohammed Rizwan Ul Haq Rayees</h1>
       <p>Web Developer</p>
-      <img src="images/cloud.png" alt="Cloud Image">
-      <img src="images/mountain.png" alt="Mounatain Image">
+      <img src="cloud.png" alt="Cloud Image">
+      <img src="mountain.png" alt="Mounatain Image">
     </div>
     <div class="middle-container">
     <h1>We Are Learning HTML</h1>
